test/Harper/Tests/Good/issue019_printFac.har
facPrintSteps :: Integer -> sideeffect -> Integer;
facPrintSteps n = {
  var (result :: Integer) = 1;
  var (i :: Integer) = 0;
  while i < n {
    i += 1;
    result *= i;
    eval printLn result ();
  }
  return result;
};

main :: sideeffect -> ();
main = {
  (f :: sideeffect -> Integer) = facPrintSteps 3;
  eval printLn "After f." ();
  (n :: Integer) = f ();
  eval print "n = " ();
  eval printLn n ();
  eval f ();
};