test/Harper/Tests/Bad/CallingCurrentOnAnEmptyRefIteratorBeforeNext.har
iterate :: RefIterator Integer sideeffect;
iterate = {
    eval printLn "Empty." ();
    yield return;
};

main :: sideeffect -> Integer;
main = iterate.current ();